tests/trybuild/compile_fail/with_settings/bump/into/guaranteed_allocated_increase.stderr
error[E0080]: evaluation panicked: can't turn a non-guaranteed-allocated bump allocator into a guaranteed-allocated one
 --> src/bump_scope.rs
  |
  | /             assert!(
  | |                 NewS::GUARANTEED_ALLOCATED <= S::GUARANTEED_ALLOCATED,
  | |                 "can't turn a non-guaranteed-allocated bump allocator into a guaranteed-allocated one"
  | |             );
  | |_____________^ evaluation of `bump_scope::BumpScope::<'_, bump_scope::alloc::Global, bump_scope::settings::BumpSettings<1, true, false>>::with_settings::<bump_scope::settings::BumpSettings>::{constant#0}` failed here

note: erroneous constant encountered
 --> src/bump_scope.rs
  |
  | /         const {
  | |             assert!(NewS::UP == S::UP, "can't change `UP` setting");
  | |
  | |             assert!(
... |
  | |             );
  | |         }
  | |_________^

note: the above error was encountered while instantiating `fn BumpScope::<'_, bump_scope::alloc::Global, BumpSettings<1, true, false>>::with_settings::<BumpSettings>`
 --> src/bump.rs
  |
  |         self.as_mut_scope().claim_mut().with_settings::<NewS>();
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
